Fix broken styles for events and news lists in homepage when items description is missing.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
@@ -1336,7 +1336,7 @@ and (resolution: 163dpi) {
   padding-right: 10px;
   padding-bottom: 3px;
   margin-top:-10px;
-  margin-bottom: 25px;"
+  margin-bottom: 25px;
 }
 
 .portlet-static-partners .partners-logos {
@@ -1382,4 +1382,9 @@ body.template-register .main-content .col-lg-9 {
 
 body.template-register label {
   display: initial;
+}
+
+div[data-diazo="land-news-list"] .listing-items .listing-item,
+div[data-diazo="land-events-list"] .listing-items .listing-item {
+  width: 100% !important;
 }
